# ruhrvibe

./: .gitignore  Cargo.toml  README.md  USER_GUIDE.md  bundle.sh  ruhrvibe-demo.xrns
.github/workflows/: build.yml
src/: arp.rs  editor.rs  envelope.rs  fast_math.rs  filter.rs  lib.rs  oscillator.rs  params.rs  presets.rs  synth.rs  voice.rs
src/fx/: chorus.rs  delay.rs  distortion.rs  gapper.rs  mod.rs  reverb.rs  shimmer.rs
