[package]
name = "ruhrvibe"
version = "0.1.0"
edition = "2021"
authors = ["VST Experiment"]
license = "ISC"
description = "Ruhrvibe - a polyphonic subtractive synthesizer VST3 plugin"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_HiDpi", "Win32_Graphics_Gdi", "Win32_Foundation"] }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev]
opt-level = 1
